# alibabacloud-nls-cpp-sdk

./: .gitignore  CMakeLists.txt  NOTICE  build_linux.sh  nlsCppSdk2.0.sln  nlsSdkConfig.conf  readme.md  version
build_linux_sdk/install/NlsSdk3.X_LINUX/: CMakeLists.txt  build.sh  readme.md
build_linux_sdk/install/NlsSdk3.X_LINUX/demo/: speechSynthesizerDemo.cpp  speechTranscriberSyncDemo.cpp  srDemo  srSyncDemo  stDemo  stSyncDemo  syDemo
build_linux_sdk/install/NlsSdk3.X_LINUX/include/: nlsEvent.h  speechSynthesizerRequest.h
demo/: CMakeLists.txt  config-speechRecognizer.txt  config-speechSynthesizer.txt  config-speechTranscriber.txt  demo.vcxproj  demo.vcxproj.filters  nlsOpuDemo.cpp  sdkDemo.cpp  speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
demo/Android/: CMakeLists.txt  dialogAssistantDemo.cpp  speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
demo/Linux/: CMakeLists.txt  build_linux_demo.sh  cosyvoiceSynthesizerDemo.cpp  demo_utils.cpp  demo_utils.h  dialogAssistantDemo.cpp  fileTransferDemo.cpp  flowingSynthesizerDemo.cpp  flowingSynthesizerMonkeyTest.cpp  funAsrTranscriberDemo.cpp  generateAPIKeyDemo.cpp  generateTokenDemo.cpp  log4cppUnitTest.cpp  log4cppUnitTestVocab.txt  paraformerTranscriberDemo.cpp  profile_scan.cpp  profile_scan.h  run_functional_test.sh  run_pressure_test.sh  speechLongSynthesizerDemo.cpp  speechRecognizerDemo.cpp  speechRecognizerMonkeyTest.cpp  speechSynthesizerDemo.cpp  speechSynthesizerMonkeyTest.cpp  speechTranscriberDemo.cpp  speechTranscriberMonkeyTest.cpp
demo/Linux_Demo/: speechRecognizerDemo.cpp  speechRecognizerSyncDemo.cpp  speechTranscriberDemo.cpp  speechTranscriberMultDemo.cpp  vipServerDemo.cpp
demo/PublicCloud/: sdkDemo.cpp  speechRecognizerDemo.cpp  speechRecognizerSyncDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp  speechTranscriberSyncDemo.cpp
demo/Win32_Demo/: CMakeLists.txt  speechRecognizerDemo.cpp  speechRecognizerSyncDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp  speechTranscriberMultDemo.cpp  speechTranscriberSyncDemo.cpp
demo/Windows/: dialogAssistantDemo.cpp  fileTransferDemo.cpp  speechRecognizerDemo.cpp  speechSynthesizerDemo.cpp  speechTranscriberDemo.cpp
nlsCppSdk/: CMakeLists.txt  linux.nlsCppSdk.cmake  nlsCppSdk.vcxproj  nlsCppSdk.vcxproj.filters  windows.nlsCppSdk.cmake
nlsCppSdk/encoder/: lpc.cpp  lpc.h  nlsEncoder.cpp  nlsEncoder.h  nlsEncoderCommon.h  oggopusAudioIn.cpp  oggopusAudioIn.h  oggopusDataStruct.h  oggopusEncoder.cpp  oggopusEncoder.h  oggopusHeader.cpp  oggopusHeader.h
nlsCppSdk/event/: workThread.cpp  workThread.h
nlsCppSdk/framework/: Config.h  Config.h.in  iWebSocketFrameResultConverter.cpp  iWebSocketFrameResultConverter.h  nlsClient.cpp  nlsClient.cpp.in  nlsClient.h  nlsClient.h.in  nlsEvent.cpp  nlsEvent.h  nlsGlobal.h  webSocketFrameHandleBase.h
nlsCppSdk/framework/common/: Config.h  Config.h.in  nlsClient.cpp  nlsClient.h  nlsClientImpl.cpp  nlsClientImpl.h  nlsEvent.cpp  nlsEvent.h  nlsEventInner.cpp  nlsEventInner.h  nlsGlobal.h  nlsRequestParamInfo.h
nlsCppSdk/framework/feature/: iNlsRequest.cpp  iNlsRequest.h  iNlsRequestListener.cpp  iNlsRequestListener.h  iNlsRequestParam.cpp  iNlsRequestParam.h  nlsRequestParamInfo.cpp  nlsRequestParamInfo.h  nlsSessionBase.cpp  nlsSessionBase.h
nlsCppSdk/framework/feature/da/: dialogAssistantListener.cpp  dialogAssistantListener.h  dialogAssistantParam.cpp  dialogAssistantParam.h  (+2 more)
nlsCppSdk/framework/item/: iNlsRequest.cpp  iNlsRequest.h  iNlsRequestListener.cpp  iNlsRequestListener.h  iNlsRequestParam.cpp  iNlsRequestParam.h  webSocketFrameHandleBase.h
nlsCppSdk/jni/: NlsRequestWarpper.cpp  NlsRequestWarpper.h  jniDialogAssistant.cpp  jniSpeechRecognizer.cpp  jniSpeechSynthesizer.cpp  jniSpeechTranscriber.cpp  native-lib.cpp  native-lib.h
nlsCppSdk/nlsOpu/: CMakeLists.txt  com_alibaba_nls_client_util_OpuCodec.c  com_alibaba_nls_client_util_OpuCodec.h  nlsOpuCoder.c  nlsOpuCoder.h
nlsCppSdk/nlsOpu/nlsCppOpu/: ReadMe.txt  nlsCppOpu.vcxproj  nlsCppOpu.vcxproj.filters
nlsCppSdk/token/include/: FileTrans.h  dashToken.h  nlsToken.h
nlsCppSdk/token/src/: AsyncCallerContext.cpp  ClientConfiguration.cpp  CommonClient.cpp  CommonRequest.cpp  CommonResponse.cpp  CoreClient.cpp  Credentials.cpp  CredentialsProvider.cpp  CurlHttpClient.cpp  Error.cpp  FileTrans.cpp  HmacSha1Signer.cpp  HttpClient.cpp  HttpMessage.cpp  HttpRequest.cpp  HttpResponse.cpp  NetworkProxy.cpp  Outcome.cpp  ServiceRequest.cpp  Signer.cpp  SimpleCredentialsProvider.cpp  Url.cpp  Utils.cpp  dashToken.cpp  nlsToken.cpp
nlsCppSdk/transport/: SSLconnect.cpp  SSLconnect.h  commonSsl.cpp  commonSsl.h  connectNode.cpp  connectNode.h  connectedPool.cpp  connectedPool.h  eventNetWork.cpp  eventNetWork.h  iosSsl.cpp  iosSsl.h  nlsEventNetWork.cpp  nlsEventNetWork.h  nodeManager.cpp  nodeManager.h  socket.cpp  socket.h  webSocketTcp.cpp  webSocketTcp.h  workThread.cpp  workThread.h
nlsCppSdk/transport/engine/: asyncBase.cpp  asyncBase.h  thread.cpp  thread.h  webSocketAgent.cpp  webSocketAgent.h
nlsCppSdk/util/: dataStruct.cpp  dataStruct.h  ensureUtility.cpp  ensureUtility.h  error.h  errorHandlingUtility.h  exception.cpp  exception.h  list.h  log.cpp  log.h  smartHandle.h  targetOs.h  utility.cpp  utility.h  wstr2str.cpp  wstr2str.h  ztCodec.cpp  ztCodec.h
nlsCppSdk/utils/: nlog.cpp  nlog.h  text_utils.cpp  text_utils.h  thread_data.h  utility.cpp  utility.h
nlsCppSdk/vipServerClient/: error_code.h  iphost.h  option.h  vipclient.h  vipclient_helper.hpp  vsclient.h
nlsCppSdk/win/: nlsCppSdk.sln  nlsCppSdk.vcxproj  nlsCppSdk.vcxproj.filters
nlsCppSdk/win/fileTransferDemo/: fileTransferDemo.vcxproj  fileTransferDemo.vcxproj.filters
nlsCppSdk/win/speechRecognizerDemo/: speechRecognizerDemo.vcxproj  speechRecognizerDemo.vcxproj.filters
nlsCppSdk/win/speechSynthesizerDemo/: speechSynthesizerDemo.vcxproj  speechSynthesizerDemo.vcxproj.filters
nlsCppSdk/win/speechTranscriberDemo/: speechTranscriberDemo.vcxproj  speechTranscriberDemo.vcxproj.filters
(+1834 files in other folders)
